app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: root-maventesting-svc
spec:
  selector:
    app: root-maventesting
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
